# zbus

./: README.md  zbus.c  zbus_iterable_sections.c  zbus_runtime_observers.c
config/: zbus_config.h  zbus_config_template.h
demos/benchmark/: CMakeLists.txt
demos/benchmark/src/: benchmark.c  messages.h
demos/hello_world/: CMakeLists.txt
demos/hello_world/src/: main.c
demos/platform/linux/: zbus_config.h
demos/platform/linux/benchmark/: CMakeLists.txt  link.lds
demos/platform/linux/hello_world/: CMakeLists.txt
demos/src/benchmark/: benchmark.c
demos/src/hello_world/: main.c
inc/: zbus.h  zbus_iterable_sections.h  zbus_kernel.h  zbus_util_internal.h  zbus_util_macro.h
inc/toolchain/: zbus_gcc.h
port/: port_template.c
port/cmsis_rtos2/: cmsis_rtos2_port.c
port/posix/: posix_port.c
